# LU-book-store

./: .gitignore  README.md  TASK.md  pyproject.toml  requirements.txt
src/: main.py
src/bookstore/: book.py  inventory.py  isbn.py
src/ui/: app.py  forms.py  handlers.py  tui.py  utils.py  widget.py
src/ui/widgets/: table.py
